building custom store

--- a/Typescript/Redux/index.html
+++ b/Typescript/Redux/index.html
@@ -3,17 +3,18 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Typescript Playground Project Template</title>	
+		<title>Typescript Playground Project Template</title>
 	</head>
 <body>
 
-	<input id="todo-input" type="text"></input>
+	<input id="todo-title-input" type="text"></input>
+	<input id="todo-content-input" type="text"></input>
 	<button id="todo-add-btn">Add</button>
 
 	<hr>
 	<ul id="todo-list"></ul>
 
 
-	<script src="./dist/index.js"></script>
+	<script src="./dist/demo.js"></script>
 </body>
 </html>
