--- a/Typescript/Rxjs/index.html
+++ b/Typescript/Rxjs/index.html
@@ -4,10 +4,17 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Typescript Playground Project Template</title>	
+
+		<style>
+			.container {
+				width: 20%;
+				background: rgba(10, 10, 10, .4);
+			}
+		</style>
 	</head>
 <body>
 
-	<section id="main">
+	<!-- <section id="main">
 		<button id="my-btn">Just a button</button>
 	</section>
 
@@ -17,7 +24,7 @@
 	<button id="increment">increment</button>
 	<button id="decrease">decrement</button>
 
-	<input type="text" id="input-name">
+	<input type="text" id="input-name"> -->
 
 	<script src="./dist/nadam.bundle.js"></script>
 </body>
