jquery ui drag-drop

--- a/UI/jquery-ui-drag-n-drop/index.html
+++ b/UI/jquery-ui-drag-n-drop/index.html
@@ -13,24 +13,83 @@
 				min-height: 80vh;
 				border: 1px solid blue;
 				float: left;
+
+
+				 overflow: scroll; 
+				z-index: 10;
+			}
+
+			.image-wall {
+				max-height: 98vh;
+				z-index: 7;
+			}
+
+			.image-wall img {
+				margin: 3px;
+				z-index: 11;
+				max-width: 200px;			
+			}
+
+			.overflow-y-hidden {
+				/* overflow-y: hidden; */
+				z-index: 9;
+			} 
+
+			.custom-state-active {
+				background: rgba(100, 130, 160, .3);
+				z-index: 8;
+				opacity: .5;
+			}
+
+			.custom-state-hover {
+				background: rgba(100, 130, 160, .5);
+			}
+
+			.circle-box-shadow {
+				box-shadow: 0 0 10px 10px darkgrey;
+				z-index: 100 !important;
 			}
 		</style>
 	</head>
 
 	<body>
 
-		<div class="container-fluid">
-			<div class="col-6 d-flex flex-row justify-content-left flex-wrap align-items-start p-2 column" id="column-a">				
-				<img src="../test-images/small/rectangle/small_1.jpg" class="draggable-column-a" style="z-index: 1;">
-				<img src="../test-images/small/rectangle/small_2.jpg" class="draggable-column-a" style="z-index: 2;">
-				<img src="../test-images/small/rectangle/small_3.jpg" class="draggable-column-a" style="z-index: 3;">
-				<img src="../test-images/small/rectangle/small_4.jpg" class="draggable-column-a" style="z-index: 4;">
-				<img src="../test-images/small/rectangle/small_5.jpg" class="draggable-column-a" style="z-index: 5;">
-				<img src="../test-images/small/rectangle/small_6.jpg" class="draggable-column-a" style="z-index: 6;">
+		<div class="container-fluid overflow-y-hidden">
+			<div class="col-6 p-2 column" id="column-a">
+				<div class="image-wall d-flex flex-row justify-content-around flex-wrap align-items-start">
+					<img src="../test-images/small/rectangle/small_1.jpg" class="draggable-column-a">
+					<img src="../test-images/small/rectangle/small_2.jpg" class="draggable-column-a">
+					<img src="../test-images/small/rectangle/small_3.jpg" class="draggable-column-a">
+					<img src="../test-images/small/rectangle/small_4.jpg" class="draggable-column-a">
+					<img src="../test-images/small/rectangle/small_5.jpg" class="draggable-column-a">
+					<img src="../test-images/small/rectangle/small_6.jpg" class="draggable-column-a">
+					<img src="../test-images/small/rectangle/small_7.jpg" class="draggable-column-a">
+					<img src="../test-images/small/rectangle/small_8.jpg" class="draggable-column-a">
+					<img src="../test-images/small/rectangle/small_9.jpg" class="draggable-column-a">
+					<img src="../test-images/small/rectangle/small_10.jpg" class="draggable-column-a">
+					<img src="../test-images/small/rectangle/small_11.jpg" class="draggable-column-a">
+					<img src="../test-images/small/rectangle/small_12.jpg" class="draggable-column-a">
+					<img src="../test-images/small/rectangle/small_13.jpg" class="draggable-column-a">
+					<img src="../test-images/small/rectangle/small_14.jpg" class="draggable-column-a">
+					<img src="../test-images/small/rectangle/small_15.jpg" class="draggable-column-a">
+					<img src="../test-images/small/rectangle/small_16.jpg" class="draggable-column-a">
+
+					<img src="../test-images/small/portraits/portrait_1.jpg" class="draggable-column-a">
+					<img src="../test-images/small/portraits/portrait_2.jpg" class="draggable-column-a">
+					<img src="../test-images/small/portraits/portrait_3.jpg" class="draggable-column-a">
+					<img src="../test-images/small/portraits/portrait_4.jpg" class="draggable-column-a">
+					<img src="../test-images/small/portraits/portrait_5.jpg" class="draggable-column-a">
+					<img src="../test-images/small/portraits/portrait_6.jpg" class="draggable-column-a">
+					<img src="../test-images/small/portraits/portrait_7.jpg" class="draggable-column-a">
+					<img src="../test-images/small/portraits/portrait_8.jpg" class="draggable-column-a">
+					<img src="../test-images/small/portraits/portrait_9.jpg" class="draggable-column-a">
+					<img src="../test-images/small/portraits/portrait_10.jpg" class="draggable-column-a">
+					<img src="../test-images/small/portraits/portrait_11.jpg" class="draggable-column-a">
+				</div>				
 			</div>
 
-			<div class="col-6 d-flex flex-row justify-content-left flex-wrap align-items-start column" id="column-b">
-
+			<div class="col-6 p-2 column" id="column-b">
+				<div class="image-wall d-flex flex-row justify-content-around flex-wrap align-items-start"></div>
 			</div>
 		</div>
 
@@ -43,7 +102,7 @@
 
 			function addDroppedItem($container, $item) {
 				$item.fadeOut(function() {
-					$item.appendTo( $container )
+					$item.appendTo( $(".image-wall", $container) )
 						.fadeIn()
 						.css({
 							"left": "",
@@ -55,20 +114,25 @@
 			$( function() {
 
 				var dragableConfig = { 
-					snap: true,
 					revert: "invalid",
 					cursor: "pointer",
-					grid: [ 40, 40 ]
+					scroll: false,
+					start: function() {
+						$(this).addClass("circle-box-shadow");
+					},
+					stop: function() {
+						$(this).removeClass("circle-box-shadow");
+					}
 				}
 
 				var dropableConfig = {						
 						classes: {
 							"ui-droppable-active": "custom-state-active",
-							"ui-droppable-hover": "ui-state-hover"
+							"ui-droppable-hover": "custom-state-hover"
 						},
 						drop: function( event, ui ) {
-							$(ui.draggable).toggleClass("draggable-column-a");
-							$(ui.draggable).toggleClass("draggable-column-b");
+							$(ui.draggable).toggleClass("draggable-column-a")
+								.toggleClass("draggable-column-b");
 							addDroppedItem(event.target, ui.draggable);
 						}
 					}
